--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,430 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Roboto:700&display=swap');
+*{
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+	text-decoration: none;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.wrapper{
+		display: flex;
+		flex-direction: column;
+		position: relative;
+	}
+@media(min-width:992px) and (max-width:1199px){
+	/* .wrapper main{
+		display: flex;
+		flex-direction: row;
+		flex-wrap: nowrap;
+		position: relative;
+		width: 100%;
+		}
+		.wrapper main .sidebar{
+			display: block;
+			position: absolute;
+			width: 245px;
+			height: 260px;
+			padding-left: 25px;
+			font-size: 13px;
+			font-family: 'Roboto';
+			color: rgb(154, 159, 191);
+			background: yellow;
+		} */
+		.wrapper main .content{
+			/* display: flex;
+			flex-direction: column;
+			position: relative; */
+			width: 650px;
+			/* height: auto; */
+			margin-left: 170px;
+		}
+		/* .author{
+			display: flex;
+			flex-direction: row;
+			flex-wrap: nowrap;
+			width: 100%;
+			height: auto;
+		}
+		.author img{
+			display: block;
+			position: relative;
+			width: 150px;
+			height: 150px;
+		}
+		.desc{
+			display: flex;
+			flex-direction: column;
+			width: 100%;
+			height: auto;
+			background: orange;
+		}
+		.post{
+			display: flex;
+			flex-direction: column;
+			width: 100%;
+			height: auto;
+			background: green;
+		}
+		.post div:first-child,
+		.post div:nth-child(2),
+		.post div:last-child{
+			display: block;
+			position: relative;
+			width: 94.8%;
+			margin: 0 auto;
+			background: lightgreen;
+		}
+		.post div:nth-child(2){
+			background: pink;
+		}
+		.post div:last-child{
+			background: blue;
+			} */
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@media(min-width:768px) and (max-width:991px){
+/* 	.wrapper{
+		display: flex;
+		flex-direction: column;
+		position: relative;
+	}
+	.wrapper header{
+		display: block;
+		position: relative;
+		background: rgb(63, 66, 87);;
+		height: 70px;
+		} */
+			/* .wrapper header>div{
+				display: flex;
+				flex-direction: row;
+				justify-content: flex-start;
+				position: relative;
+				width: 100%;
+			} */
+			.imgLogo{
+				/* display: flex;
+				align-items: center;
+				position: relative; */
+				width: 70px;
+				/* height: 70px;
+				background: rgb(255, 94, 58); */
+			}
+			/* .imgLogo img{
+				display: block;
+				position: relative;
+				width: 34px;
+				height: 34px;
+				margin-left: 18px;
+				background: rgb(255, 94, 58);
+			} */
+			.imgLogo h6{
+				display: none;
+				/* position: relative;
+				margin-left: 20px;
+				color: #fff;
+				font-size: 14px;
+				font-family: 'Roboto';
+				font-weight: 700;
+				text-transform: uppercase; */
+		}
+/* 		.wrapper main{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	position: relative;
+	width: 100%;
+	} */
+			.wrapper main .sidebar{
+				display: none;
+				/* position: absolute;
+				width: 245px;
+				height: 260px;
+				padding-left: 25px;
+				font-size: 13px;
+				font-family: 'Roboto';
+				color: rgb(154, 159, 191);
+				z-index: 111;
+				background: yellow; */
+			}
+			.wrapper main .content{
+				/* display: flex;
+				flex-direction: column;
+				position: relative; */
+				width: 570px;
+				/* height: auto;
+				margin-left: 375px; */
+				margin: 0 auto;
+			}
+			/* .author{
+				display: flex;
+				flex-direction: row;
+				flex-wrap: nowrap;
+				width: 100%;
+				height: auto;
+			}
+			.author img{
+				display: block;
+				position: relative;
+				width: 150px;
+				height: 150px;
+			}
+			.desc{
+				display: flex;
+				flex-direction: column;
+				width: 100%;
+				height: auto;
+				background: orange;
+			}
+			.post{
+				display: flex;
+				flex-direction: column;
+				width: 100%;
+				height: auto;
+				background: green;
+			}
+			.post div:first-child,
+			.post div:nth-child(2),
+			.post div:last-child{
+				display: block;
+				position: relative;
+				width: 94.8%;
+				margin: 0 auto;
+				background: lightgreen;
+			}
+			.post div:nth-child(2){
+				background: pink;
+			}
+			.post div:last-child{
+				background: blue;
+					} */
 }
-
-.App-link {
-  color: #61dafb;
+@media(min-width:576px) and (max-width:767px){
+/* 	.wrapper{
+		display: flex;
+		flex-direction: column;
+		position: relative;
+	}
+	.wrapper header{
+		display: block;
+		position: relative;
+		background: rgb(63, 66, 87);;
+		height: 70px;
+		} */
+			/* .wrapper header>div{
+				display: flex;
+				flex-direction: row;
+				justify-content: flex-start;
+				position: relative;
+				width: 100%;
+			} */
+			.imgLogo{
+				/* display: flex;
+				align-items: center;
+				position: relative; */
+				width: 70px;
+				/* height: 70px;
+				background: rgb(255, 94, 58); */
+			}
+			/* .imgLogo img{
+				display: block;
+				position: relative;
+				width: 34px;
+				height: 34px;
+				margin-left: 18px;
+				background: rgb(255, 94, 58);
+			} */
+			.imgLogo h6{
+				display: none;
+				/* position: relative;
+				margin-left: 20px;
+				color: #fff;
+				font-size: 14px;
+				font-family: 'Roboto';
+				font-weight: 700;
+				text-transform: uppercase; */
+		}
+/* 		.wrapper main{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	position: relative;
+	width: 100%;
+	} */
+			.wrapper main .sidebar{
+				display: none;
+				/* position: absolute;
+				width: 245px;
+				height: 260px;
+				padding-left: 25px;
+				font-size: 13px;
+				font-family: 'Roboto';
+				color: rgb(154, 159, 191);
+				z-index: 111;
+				background: yellow; */
+			}
+			.wrapper main .content{
+				/* display: flex;
+				flex-direction: column;
+				position: relative; */
+				width: 546px;
+				/* height: auto;
+				margin-left: 375px; */
+				margin: 0 auto;
+			}
+			/* .author{
+				display: flex;
+				flex-direction: row;
+				flex-wrap: nowrap;
+				width: 100%;
+				height: auto;
+			}
+			.author img{
+				display: block;
+				position: relative;
+				width: 150px;
+				height: 150px;
+			}
+			.desc{
+				display: flex;
+				flex-direction: column;
+				width: 100%;
+				height: auto;
+				background: orange;
+			}
+			.post{
+				display: flex;
+				flex-direction: column;
+				width: 100%;
+				height: auto;
+				background: green;
+			}
+			.post div:first-child,
+			.post div:nth-child(2),
+			.post div:last-child{
+				display: block;
+				position: relative;
+				width: 94.8%;
+				margin: 0 auto;
+				background: lightgreen;
+			}
+			.post div:nth-child(2){
+				background: pink;
+			}
+			.post div:last-child{
+				background: blue;
+					} */
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media(min-width:320px) and (max-width:575px){
+/* 	.wrapper{
+		display: flex;
+		flex-direction: column;
+		position: relative;
+	}
+	.wrapper header{
+		display: block;
+		position: relative;
+		background: rgb(63, 66, 87);;
+		height: 70px;
+		} */
+			/* .wrapper header>div{
+				display: flex;
+				flex-direction: row;
+				justify-content: flex-start;
+				position: relative;
+				width: 100%;
+			} */
+			.imgLogo{
+				/* display: flex;
+				align-items: center;
+				position: relative; */
+				width: 70px;
+				/* height: 70px;
+				background: rgb(255, 94, 58); */
+			}
+			/* .imgLogo img{
+				display: block;
+				position: relative;
+				width: 34px;
+				height: 34px;
+				margin-left: 18px;
+				background: rgb(255, 94, 58);
+			} */
+			.imgLogo h6{
+				display: none;
+				/* position: relative;
+				margin-left: 20px;
+				color: #fff;
+				font-size: 14px;
+				font-family: 'Roboto';
+				font-weight: 700;
+				text-transform: uppercase; */
+		}
+/* 		.wrapper main{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	position: relative;
+	width: 100%;
+	} */
+			.wrapper main .sidebar{
+				display: none;
+				/* position: absolute;
+				width: 245px;
+				height: 260px;
+				padding-left: 25px;
+				font-size: 13px;
+				font-family: 'Roboto';
+				color: rgb(154, 159, 191);
+				z-index: 111;
+				background: yellow; */
+			}
+			.wrapper main .content{
+				/* display: flex;
+				flex-direction: column;
+				position: relative; */
+				width: 295px;
+				/* height: auto;
+				margin-left: 375px; */
+				margin: 0 auto;
+			}
+			/* .author{
+				display: flex;
+				flex-direction: row;
+				flex-wrap: nowrap;
+				width: 100%;
+				height: auto;
+			}
+			.author img{
+				display: block;
+				position: relative;
+				width: 150px;
+				height: 150px;
+			}
+			.desc{
+				display: flex;
+				flex-direction: column;
+				width: 100%;
+				height: auto;
+				background: orange;
+			}
+			.post{
+				display: flex;
+				flex-direction: column;
+				width: 100%;
+				height: auto;
+				background: green;
+			}
+			.post div:first-child,
+			.post div:nth-child(2),
+			.post div:last-child{
+				display: block;
+				position: relative;
+				width: 94.8%;
+				margin: 0 auto;
+				background: lightgreen;
+			}
+			.post div:nth-child(2){
+				background: pink;
+			}
+			.post div:last-child{
+				background: blue;
+					} */
 }
