Создание страницы сообщений, первичная стилизация. Рефакторинг кода - информация на странице берется из объектов. Выполнена маршрутизация ссылок из нав.меню

--- a/src/components/Main/My_page/Posts/Post.module.css
+++ b/src/components/Main/My_page/Posts/Post.module.css
@@ -6,6 +6,7 @@
 	min-height: 150px;
 	max-height: 450px;
 	margin: 15px auto;
+	border: 1px solid #fff;
 	border-radius: 0.3em;
 	background: #fff;
 }
